<resources>
    <string name="app_name">ItsApp</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="ingresa_para_continuar">Por favor ingresa para continuar</string>

    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="clave">Contraseña</string>
    <string name="ingresar">Ingresar</string>

    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="por_favor_digite_los_siguientes_datos">Por favor digite los siguientes datos:</string>

    <string name="datos_basicos">Datos básicos</string>
    <string name="primer_nombre">Primer nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="profesion">Profesión</string>

    <string-array name="profesiones">
        <item>Médico</item>
        <item>Estudiante</item>
        <item>Enfermero</item>
    </string-array>

    <string name="datos_de_usuario">Datos de usuario</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="confirmar_correo_electronico">Confirmar correo electrónico</string>

    <string name="logo">logo</string>

    <string-array name="infections">
        <item>Uretritis</item>
        <item>Úlceras genitales</item>
        <item>Flujo vaginal</item>
        <item>Proctitis</item>
        <item>Cervicitis</item>
        <item>Hepatitis B</item>
        <item>Virus del Papiloma Humano</item>
    </string-array>

    <string name="mensaje_menu">Protocolo de diagnóstico y tratamiento de las infecciones de transmisión sexual Colombia</string>

    <string name="buscar">Buscar…</string>
    <string name="infeccion">Infección</string>
    <string name="nombre_de_infeccion">Nombre de la infección</string>
    <string name="definicion">Definición</string>
    <string name="diagnostico">Diagnóstico</string>
    <string name="sin_descripcion">Sin descripción</string>
    <string name="descripcion_uretritis">Paciente hombre o mujer con vida sexual activa que representa disuria, prurito uretral, y salida de secreción mucopurulenta, mucoide, o purulenta por la uretra.</string>
    <string name="diagnostico_uretritis">Condiciones del paciente para la toma de la muestra: no estar tomando antibióticos. La muestra ideal es la secreción uretral para lo cual se recomienda no haber orinado por dos horas como mínimo. Se le debe advertir al paciente que no descarte la primera porción del chorro urinario.\n\n\u2022 Una coloración de Gram de la secreción o del hisopado uretral con reacción leucocitaria es indicativa de diagnóstico de uretritis.\n\u2022 A todo paciente a quien se le diagnostica una ITS, se le debe solicitar prueba de VIH y de sífilis.\n\u2022 La coinfección por N. gonorrhoeae y C. trachomatis en un paciente con uretritis es frecuente.</string>
</resources>