<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".create_account.CreateAccountActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_create_account"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/blue_dark"

        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--            <TextView-->
            <!--                android:id="@+id/title_create_account"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="match_parent"-->
            <!--                android:text="@string/crear_cuenta"-->
            <!--                android:textStyle="bold"-->
            <!--                android:textSize="28sp"-->
            <!--                android:textColor="@color/blue_dark"-->
            <!--                android:gravity="center_vertical"-->

            <!--                app:layout_constraintStart_toStartOf="parent"-->
            <!--                app:layout_constraintTop_toTopOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="parent"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"/>-->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_create_account"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_create_account">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/basic_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"

                android:layout_margin="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_basic_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/datos_basicos"
                        android:textSize="22sp"
                        android:textStyle="bold"

                        android:layout_margin="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_firstname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"

                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="@id/textView_basic_data"
                        app:layout_constraintTop_toBottomOf="@id/textView_basic_data"
                        app:layout_constraintEnd_toEndOf="@id/textView_basic_data">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_firstname"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:hint="@string/primer_nombre"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_surname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"

                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@id/layout_firstname"
                        app:layout_constraintTop_toBottomOf="@id/layout_firstname"
                        app:layout_constraintEnd_toEndOf="@id/layout_firstname">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_surname"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:hint="@string/primer_apellido"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_profession"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"

                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintStart_toStartOf="@id/layout_surname"
                        app:layout_constraintTop_toBottomOf="@id/layout_surname"
                        app:layout_constraintEnd_toEndOf="@id/layout_surname"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.MaterialAutoCompleteTextView
                            android:id="@+id/listOfProfessions"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:hint="@string/profesion"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/user_data"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"

                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@id/basic_data"
                app:layout_constraintTop_toBottomOf="@id/basic_data"
                app:layout_constraintEnd_toEndOf="@id/basic_data">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView_user_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/datos_de_usuario"
                        android:textSize="22sp"
                        android:textStyle="bold"

                        android:layout_margin="16dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"

                        android:layout_marginTop="16dp"
                        app:layout_constraintStart_toStartOf="@id/textView_user_data"
                        app:layout_constraintTop_toBottomOf="@id/textView_user_data"
                        app:layout_constraintEnd_toEndOf="@id/textView_user_data">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:hint="@string/correo_electronico"
                            android:inputType="textEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_confirm_email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"

                        android:layout_marginTop="8dp"
                        app:layout_constraintStart_toStartOf="@id/layout_email"
                        app:layout_constraintTop_toBottomOf="@id/layout_email"
                        app:layout_constraintEnd_toEndOf="@id/layout_email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_confirm_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:hint="@string/confirmar_correo_electronico"
                            android:inputType="textEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/layout_password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:endIconMode="password_toggle"
                        app:boxCornerRadiusTopStart="8dp"
                        app:boxCornerRadiusTopEnd="8dp"
                        app:boxCornerRadiusBottomEnd="8dp"
                        app:boxCornerRadiusBottomStart="8dp"

                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintStart_toStartOf="@id/layout_confirm_email"
                        app:layout_constraintTop_toBottomOf="@id/layout_confirm_email"
                        app:layout_constraintEnd_toEndOf="@id/layout_confirm_email"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/editText_password"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="16sp"
                            android:hint="@string/clave"
                            android:inputType="textPassword">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:padding="12dp"
        app:cornerRadius="8dp"
        app:elevation="4dp"

        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nested_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </com.google.android.material.button.MaterialButton>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>